Fix issue with vehicle activities always returning first, and instead select based on latest recorded time of location; make small change to app.js to enable switching between ws and wss based on spring profile