@@ -1,10 +1,8 @@
 package com.flatshire.fbis.helpers;
 
 import com.flatshire.fbis.DataFeedServiceException;
-import com.flatshire.fbis.FbisProperties;
 import com.flatshire.fbis.DataFeedServiceUnavailableException;
-import com.flatshire.fbis.components.BodsServiceHelper;
-
+import com.flatshire.fbis.FbisProperties;
 import com.flatshire.fbis.domain.BusInfo;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
@@ -16,9 +14,11 @@ import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 import uk.org.siri.siri21.*;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Stream;
 
 import static com.flatshire.fbis.FbisProperties.API_KEY;
 
@@ -38,13 +38,13 @@ public class DataFeedBodsServiceHelper implements BodsServiceHelper {
     }
 
     @Override
-    public Pair<String, String> fetchData(String lineRef) throws DataFeedServiceUnavailableException {
+    public Pair<String, String>  fetchData(String lineRef) throws DataFeedServiceUnavailableException {
         Objects.requireNonNull(lineRef, "Line Ref was null");
         if(properties.get(API_KEY) == null) {
             throw new IllegalStateException("API Key not supplied");
         }
 
-        String urlTemplate = "%s?operatorRef=%s&api_key=%s".formatted(
+        String urlTemplate = String.format("%s?operatorRef=%s&api_key=%s",
                 properties.get("dataFeedUri"),
                 properties.get("operatorRef"),
                 TOKEN_PLACEHOLDER);
@@ -91,8 +91,10 @@ public class DataFeedBodsServiceHelper implements BodsServiceHelper {
         if(vehicleActivity.isEmpty()) {
             throw new IllegalStateException("No vehicle activity found");
         } else {
-            VehicleActivityStructure.MonitoredVehicleJourney monitoredVehicleJourney = vehicleActivity.get(0)
-                    .getMonitoredVehicleJourney();
+            // get last recorded vehicle activity entry in vehicleMonitoring list
+            Comparator<VehicleActivityStructure> inReverseRecordedTimeOrder = (va, vb) -> Math.toIntExact(vb.getRecordedAtTime().toEpochSecond() - va.getRecordedAtTime().toEpochSecond());
+            Stream<VehicleActivityStructure> vehicleActivities = vehicleActivity.stream().sorted(inReverseRecordedTimeOrder);
+            VehicleActivityStructure.MonitoredVehicleJourney monitoredVehicleJourney = vehicleActivities.toList().get(0).getMonitoredVehicleJourney();
             LocationStructure vehicleLocation = monitoredVehicleJourney.getVehicleLocation();
             return new ImmutablePair<>(vehicleLocation.getLatitude().toPlainString(),
                     vehicleLocation.getLongitude().toPlainString());
